<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.EditFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="376dp"
        android:layout_height="518dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/sky"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="84dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/description"
                android:text="@string/description"
                android:textColor="#F4F1F1"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextDescription"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="#FAF7F7"
                android:textColorHighlight="#FBF7F7"
                android:textColorLink="#FBFBFB"
                android:hint="@string/enter_name"
                android:autofillHints="name"
                android:textColorHint="#C0C0C0"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="#F8F5F5"
                android:textColorHighlight="#FAF9F9"
                android:textColorHint="#C0C0C0"
                android:textColorLink="#F4EFEF"
                android:autofillHints="name"
                android:hint="@string/enteramount"
                app:layout_constraintStart_toStartOf="@+id/editTextPrice"
                app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/amount"
                android:textColor="#F6F4F4"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextAmount"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                android:textColor="#F8F6F6"
                app:layout_constraintBaseline_toBaselineOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textColor="#FAF6F6"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#C0C0C0"
                android:autofillHints="name"
                android:textColorLink="#F1F1F1"
                android:hint="@string/enter_price"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clipToPadding="false"
                android:ellipsize="none"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp"
                android:contentDescription="@string/choose_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
                tools:listitem="@layout/items_images" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/the_price_of_the_purchased_item"
                android:text="@string/price"
                android:textColor="#FAF9F9"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextPrice"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="wrap_content"
                android:layout_height="136dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine|textPersonName|textImeMultiLine"
                android:lines="6"
                android:padding="16dp"
                android:textColor="#FDFDFD"
                android:autofillHints="name"
                android:hint="@string/enter_description"
                android:textColorHint="#C0C0C0"
                app:layout_constraintStart_toStartOf="@+id/editTextAmount"
                app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8098495" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="411dp"
        android:layout_height="35dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/sea"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="false"
            android:contentDescription="@string/confirm_button"
            android:src="@drawable/ic_edit_confirm"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="@string/add_a_new_item"
            android:src="@drawable/ic_add_confirm"
            app:backgroundTint="@color/purple_500"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>